--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 /* CSS Document */
-
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -35,9 +34,23 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#map-container {
+  flex: 3;
+}
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
+  height: auto;
+  display: flex;
+}
+#outside-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 #footer {
   background-color: #444;
@@ -51,12 +64,13 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 50px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
 nav h1 {
   margin: auto;
+  padding: 10px;
 }
 nav h1 a {
   color: #fff;
@@ -99,16 +113,17 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 100%;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: auto;
   background-color: #3397DB;
   align-items: center;
+  padding: 20px 0;
 }
 .filter-options h2 {
   color: white;
@@ -130,11 +145,15 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Listing ====================== */
+#restaurant-info {
+  overflow-y: scroll;
+}
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 15px;
   text-align: center;
 }
 #restaurants-list li {
@@ -272,4 +291,10 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+@media only screen and (max-width: 500px) {
+  #maincontent {
+    flex-direction: column;
+  }
 }
